frontend/test/should_fail/array_var.grg
function var(ref a:array<string>) : double
{
	return(a.var());
}